--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Everybody</p>
     <p>Hi!</p>
     <p>Welcome to my awesome page!</p>
-    <p>This is great!</p>
+    <p>This is great, right!</p>
 </body>
 </html>
